--- a/src/css/style.css
+++ b/src/css/style.css
@@ -8,3 +8,14 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
+
+ul {
+  display: flex;
+  padding: 1em;
+  justify-content: center;
+  list-style-type: none;
+}
+
+li {
+  margin-right: 1em;
+}
