--- a/src/css/style.css
+++ b/src/css/style.css
@@ -5,8 +5,19 @@
 }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: 'Ubuntu', 'Arial';
+}
+h1 {
+  font-family: 'DM Serif Display', 'Times New Roman';
+  font-size: 5em;
+  color: whitesmoke;
+  letter-spacing: 2px;
+}
+
+nav {
+  position:absolute;
+  width: 100%;
+  background-color: rgba(255, 255, 255, 0.1);
 }
 
 ul {
@@ -14,8 +25,22 @@ ul {
   padding: 1em;
   justify-content: center;
   list-style-type: none;
+  position: relative;
+  
 }
 
 li {
   margin-right: 1em;
+}
+
+.cover {
+  height: 70vh;
+  margin: auto;
+  padding: 200px;
+  background-image: url("../img/food-bg.jpg");
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: bottom;
+
+  text-align: center;
 }
