--- a/src/css/style.css
+++ b/src/css/style.css
@@ -100,10 +100,9 @@ button {
   text-align: center;
   text-decoration: none;
   font-size: 16px;
+  box-shadow: 3px 3px 1px 0 rgba(0,0,0,0.5)
 }
 
-.button:active {
-  background-color: #3e8e41;
-  box-shadow: 0 5px #666;
-  transform: translateY(4px);
+button:active {
+  box-shadow: 1px 1px 1px 0 rgba(0,0,0,0.5)
 }
