--- a/src/css/style.css
+++ b/src/css/style.css
@@ -106,3 +106,12 @@ button {
 button:active {
   box-shadow: 1px 1px 1px 0 rgba(0,0,0,0.5)
 }
+
+.checkout-item {
+  width: 60vw;
+  margin: auto;
+  display: flex;
+  justify-content: space-between;
+
+  text-align: center;
+}
